--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,6 @@ rich==13.6.0
 rpds-py==0.10.6
 smmap==5.0.1
 streamlit==1.27.2
-TA-Lib==0.4.28
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
@@ -45,3 +44,4 @@ tzlocal==5.2
 urllib3==2.0.7
 validators==0.22.0
 xyzservices==2023.10.0
+requests
